--- a/paginas/redsocial.html
+++ b/paginas/redsocial.html
@@ -27,7 +27,7 @@
             <div class="card">
                 <h3>Paraguay</h3>
                 <video class="media" controls>
-                    <source src="../statics/videoplayback.mp4" type="video/mp4" />
+                    <source src="../../statics/videoplayback.mp4" type="video/mp4" />
                 </video>
                 <span class="like-btn" data-liked="false" data-likes="0">🤍 Like </span>
             </div>
