--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Proyecto Final - Página Principal</title>
 
   <!-- Archivos externos -->
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -21,32 +21,32 @@
       </div>
 
       <div class="nav-item">
-        <a class="nav-link" href="./paginas/html_basico.html">HTML básico</a>
+        <a class="nav-link" href="paginas/html_basico.html">HTML básico</a>
       </div>
 
       <!-- Banco -->
       <div class="nav-item">
         <span class="nav-link">Banco ▼</span>
         <div class="dropdown-content">
-          <a href="./paginas/banco_tabla.html">Banco - Tabla</a>
-          <a href="./paginas/banco_miembros.html">Banco - Miembros</a>
+          <a href="paginas/banco_tabla.html">Banco - Tabla</a>
+          <a href="paginas/banco_miembros.html">Banco - Miembros</a>
         </div>
       </div>
       <!-- Galería -->
       <div class="nav-item">
-        <a class="nav-link" href="./paginas/galeria.html">Galería</a>
+        <a class="nav-link" href="paginas/galeria.html">Galería</a>
       </div>
 
       <!-- Operaciones -->
       <div class="nav-item">
-        <a class="nav-link" href="./paginas/operaciones.html">Operaciones</a>
+        <a class="nav-link" href="paginas/operaciones.html">Operaciones</a>
       </div>
 
       <!-- Formularios -->
       <div class="nav-item">
         <span class="nav-link">Formularios ▼</span>
         <div class="dropdown-content">
-          <a href="./paginas/matriculacion.html">Matriculación</a>
+          <a href="paginas/matriculacion.html">Matriculación</a>
           <a href="paginas/prueba.html">Prueba</a>
         </div>
       </div>
@@ -55,11 +55,11 @@
       <div class="nav-item">
         <span class="nav-link">APIs ▼</span>
         <div class="dropdown-content">
-          <a href="./paginas/clima.html">Clima (OpenWeather)</a>
-          <a href="./paginas/paises.html">Países (REST Countries)</a>
-          <a href="./paginas/pokemon.html">Pokémon (PokéAPI)</a>
-          <a href="./paginas/rick_morty.html">Rick & Morty</a>
-          <a href="./paginas/criptomonedas.html">Criptomonedas (CoinGecko)</a>
+          <a href="paginas/clima.html">Clima (OpenWeather)</a>
+          <a href="paginas/paises.html">Países (REST Countries)</a>
+          <a href="paginas/pokemon.html">Pokémon (PokéAPI)</a>
+          <a href="paginas/rick_morty.html">Rick & Morty</a>
+          <a href="paginas/criptomonedas.html">Criptomonedas (CoinGecko)</a>
         </div>
       </div>
 
@@ -67,9 +67,9 @@
       <div class="nav-item">
         <span class="nav-link">Multimedia ▼</span>
         <div class="dropdown-content">
-          <a href="./paginas/multimedia1.html">Mapas</a>
-          <a href="./paginas/multimedia2.html">Videos YouTube</a>
-          <a href="./paginas/multimedia3.html">Videos MP4 + Audios</a>
+          <a href="paginas/multimedia1.html">Mapas</a>
+          <a href="paginas/multimedia2.html">Videos YouTube</a>
+          <a href="paginas/multimedia3.html">Videos MP4 + Audios</a>
         </div>
       </div>
 
@@ -77,9 +77,9 @@
       <div class="nav-item">
         <span class="nav-link">Menús ▼</span>
         <div class="dropdown-content">
-          <a href="./paginas/Menu1.html">Menú 1</a>
-          <a href="./paginas/Menu2.html">Menú 2</a>
-          <a href="./paginas/Menu3.html">Menú 3</a>
+          <a href="paginas/Menu1.html">Menú 1</a>
+          <a href="paginas/Menu2.html">Menú 2</a>
+          <a href="paginas/Menu3.html">Menú 3</a>
         </div>
       </div>
 
@@ -87,9 +87,9 @@
       <div class="nav-item">
         <span class="nav-link">Red Social ▼</span>
         <div class="dropdown-content">
-          <a href="./paginas/redsocial.html">Red Social</a>
-          <a href="./paginas/comentarios.html">Comentarios</a>
-          <a href="./paginas/noticias.html">Noticias</a>
+          <a href="paginas/redsocial.html">Red Social</a>
+          <a href="paginas/comentarios.html">Comentarios</a>
+          <a href="paginas/noticias.html">Noticias</a>
         </div>
       </div>
 
