--- a/paginas/Menu1.html
+++ b/paginas/Menu1.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Menu 1</title>
 </head>
 <body class="menu1">
 
     <nav>
-        <a href="./index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
         <a href="https://www.euroinnova.com/blog/productos-informaticos-y-su-funcion">Productos</a>
         <a href="https://www.facebook.com/NihonGakkoUniversidad/?locale=es_LA">Contacto</a>
     </nav>
