--- a/paginas/banco_miembros.html
+++ b/paginas/banco_miembros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imágenes de los Miembros</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <style>
       </style>
 </head>
@@ -20,7 +20,7 @@
         <div class="miembro"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU2fX61uXvNqOYYcRkBDFkBMxmbEpcciV7uoMo-t9YahG5-EK-IpsGrPToKz3uy3Pg8XE&usqp=CAU" alt="Liz"><p>Liz Benítez</p><p>Vocal</p></div>
     </div>
 
-    <a href="./index.html" class="boton">Volver a Inicio</a>
+    <a href="../index.html" class="boton">Volver a Inicio</a>
     <a href="banco_tabla.html" class="boton">Ver Tabla</a>
 
     <footer>
