--- a/paginas/criptomonedas.html
+++ b/paginas/criptomonedas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Proyecto APIs – Inicio</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body class="api-page">
 
@@ -73,6 +73,6 @@
     </section>
 </div>
 
-<script src="./js/apis.js" defer></script>
+<script src="../js/apis.js" defer></script>
 </body>
 </html>
