--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galería</title>
-  <link rel="stylesheet" href="./css/styles.css">
-  <script defer src="./js/edad.js"></script>
+  <link rel="stylesheet" href="../css/styles.css">
+  <script defer src="../js/edad.js"></script>
 </head>
 <body onload="mensajeEdad()">
 
@@ -21,7 +21,7 @@
   </div>
 
   <div class="botones">
-    <a href="./index.html" class="animado">Inicio</a>
+    <a href="../index.html" class="animado">Inicio</a>
     <a href="operaciones.html" class="animado">Operaciones</a>
   </div>
 
