--- a/paginas/operaciones.html
+++ b/paginas/operaciones.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tabla de Operaciones</title>
-  <link rel="stylesheet" href="./css/styles.css">
-  <script defer src="./js/calculos.js"></script>
+  <link rel="stylesheet" href="../css/styles.css">
+  <script defer src="../js/calculos.js"></script>
 </head>
 <body>
   <h1>Tabla de Operaciones</h1>
@@ -43,7 +43,7 @@
   </table>
 
   <div class="botones">
-    <a href="./index.html" class="animado">Inicio</a>
+    <a href="../index.html" class="animado">Inicio</a>
     <a href="galeria.html" class="animado">Galería</a>
   </div>
 
