--- a/paginas/prueba.html
+++ b/paginas/prueba.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Examen de Informática</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <script src="./js/formulario_prueba.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/formulario_prueba.js"></script>
 </head>
 <body class="form-body">
     <div class="exam-box">
