--- a/paginas/Menu2.html
+++ b/paginas/Menu2.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Menu 2</title>
 </head>
 <body class="menu2">
 
     <nav>
-        <a href="./index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="https://pixabay.com/es/">Galería</a>
         <a href="https://www.facebook.com/NihonGakkoUniversidad/?locale=es_LA">Acerca de</a>
     </nav>
