--- a/paginas/banco_tabla.html
+++ b/paginas/banco_tabla.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miembros del Banco</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <style>
       
     </style>
@@ -21,7 +21,7 @@
         <tr><td>Liz</td><td>Benítez</td><td>Vocal</td></tr>
     </table>
 
-    <a href="./index.html" class="boton">Volver a Inicio</a>
+    <a href="../index.html" class="boton">Volver a Inicio</a>
     <a href="banco_miembros.html" class="boton">Ver Imágenes</a>
 
     <footer>
