--- a/paginas/html_basico p1.html
+++ b/paginas/html_basico p1.html
@@ -42,6 +42,6 @@
     </table>
 
     <br>
-    <a href="./index.html">Volver a la página principal</a>
+    <a href="../index.html">Volver a la página principal</a>
 </body>
 </html>
