--- a/paginas/matriculacion.html
+++ b/paginas/matriculacion.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <script src="./js/formulario_matriculacion.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/formulario_matriculacion.js"></script>
 </head>
 <body class="form-body">
     <div class="signup-box">
