--- a/paginas/pokemon.html
+++ b/paginas/pokemon.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Proyecto APIs – Inicio</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body class="api-page">
 
@@ -18,7 +18,7 @@
     </header>
 
     <nav class="nav-buttons">
-       <a class="nav-btn" href="./index.html">Inicio</a>
+       <a class="nav-btn" href="../index.html">Inicio</a>
         <a class="nav-btn" href="clima.html">API Clima</a>
         <a class="nav-btn" href="paises.html">API Países</a>
         <a class="nav-btn" href="pokemon.html">API Pokémon</a>
@@ -64,6 +64,6 @@
     </section>
 </div>
 
-<script src="./js/apis.js" defer></script>
+<script src="../js/apis.js" defer></script>
 </body>
 </html>
