--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>Proyecto Final – Sitio Web</h1>
+    <h1>Inicio</h1>
     <button class="menu-toggle" id="menuToggle">Menú</button>
 
     <nav class="navbar" id="mainNavbar">
@@ -120,7 +120,7 @@
     <section>
       <h2>Descripción general del sitio</h2>
       <p>
-        Este sitio web reúne diferentes trabajos prácticos de la materia. 
+        Este sitio web podras ver diversas paginas imagenez y redes sociales. 
         Cada menú y subpágina muestra un tema específico:
       </p>
 
