--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>Inicio</h1>
+    <h1>Pagina Web</h1>
     <button class="menu-toggle" id="menuToggle">Menú</button>
 
     <nav class="navbar" id="mainNavbar">
