--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -12,9 +12,9 @@
             <h2>Noticias</h2>
 
             <div class="card">
-                <h3>Selección Paraguaya</h3>
+                <h3>Selección Paraguaya talla baja</h3>
                 <p>Paraguay se consagra bicampeón de América.</p>
-                <img src="https://www.abc.com.py/resizer/v2/https%3A%2F%2Fcloudfront-us-east-1.images.arcpublishing.com%2Fabccolor%2FGCIE46VPCVGIZPYDUGDSIBV3CU.jpg?auth=041dc274d5981811e40666bf7165303a22903e8045d1d2d940ec6bba313ad78d&width=770&smart=true" class="media" />
+                <img src="https://www.lanacion.com.py/resizer/v2/4SCVGOW2D5CULJMRQ7Y4C72ND4.jpg?auth=3912a994070dc5998786b776ba3b2675b1e96ff2abb652fd543d165d2e83c795" class="media" />
                 <span class="like-btn" data-liked="false" data-likes="0">🤍 Like </span>
             </div>
 
