--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <section>
       <h2>Descripción general del sitio</h2>
       <p>
-        Este sitio web podras ver diversas paginas imagenes y redes sociales. 
+        En este sitio web podras ver diversas paginas imagenes y redes sociales. 
         Cada menú y subpágina muestra un tema específico:
       </p>
 
