--- a/paginas/html_basico p2.html
+++ b/paginas/html_basico p2.html
@@ -28,6 +28,6 @@
 
 
     <br><br>
-    <a href="/index.html">Volver a la página principal</a>
+    <a href="../index.html">Volver a la página principal</a>
 </body>
 </html>
