--- a/paginas/banco_miembros.html
+++ b/paginas/banco_miembros.html
@@ -15,7 +15,7 @@
     <div class="galeria">
         <div class="miembro"><img src="https://www.argentina.gob.ar/sites/default/files/fernando_morra.jpg" alt="Miguel"><p>Miguel Gimenez Presidente</p></div>
         <div class="miembro"><img src="https://www.aprender21.com/images/colaboradores/secretaria.webp" alt="Maria"><p>Maria Noguera Vicepresidenta</p></div>
-        <div class="miembro"><img src="https://www.sise.edu.pe/uploads/large_perfil_secretaria_ejecutiva_moderna_7d1195876d.jpg" alt="Evelin"><p>Evelin Martínez Tesorera</p><p>Tesorera</p></div>
+        <div class="miembro"><img src="https://www.sise.edu.pe/uploads/large_perfil_secretaria_ejecutiva_moderna_7d1195876d.jpg" alt="Evelin"><p>Evelin Martínez</p><p>Tesorera</p></div>
         <div class="miembro"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRh5q1f0gkCbgx4sbFuDKm-olkiqiGP_GpO2w&s" alt="Jorge"><p>Jorge Ramírez </p><p>Secretario</p></div>
         <div class="miembro"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU2fX61uXvNqOYYcRkBDFkBMxmbEpcciV7uoMo-t9YahG5-EK-IpsGrPToKz3uy3Pg8XE&usqp=CAU" alt="Liz"><p>Liz Benítez</p><p>Vocal</p></div>
     </div>
